--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,10 @@
 @tailwind utilities;
 
 .btn1{
-	@apply text-white bg-orange-600 font-[Poppins] py-1 px-4 rounded md:ml-8 hover:bg-green-400 
+	@apply text-white bg-orange-600 font-[Poppins] py-1 px-4 rounded md:ml-8 hover:bg-green-700 
     duration-500
 }
 .btn2{
-    @apply text-orange-600 border-orange-600 border font-[Poppins] py-1 px-4 rounded md:ml-8 hover:bg-green-400 
+    @apply text-orange-600 border-orange-600 border font-[Poppins] py-1 px-4 rounded md:ml-8 hover:text-green-700  hover:border-green-700 
     duration-500
 }
